--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ __pycache__/
 # Model files
 /checkpoints
 /models
+
+# Notebooks
+/benchmark_data_loading.ipynb
+/model_container.ipynb
+/models.ipynb
+/transformation_tester.ipynb
