Updated .gitignore. The notebooks used to generate Python files are not uploaded to the repo anymore.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ __pycache__/
 # Lightning files
 /lightning_logs
 
-# Model files
+# Models
 /checkpoints
 /models
+
+# Notebooks for generating .py files
+/notebooks
