--- a/conf/mode/adversarial_erasing.yaml
+++ b/conf/mode/adversarial_erasing.yaml
@@ -1,10 +1,11 @@
 name: adversarial_erasing
 dataset_type: adversarial_erasing
 train_data_transform: val
+lightning_model: adversarial_erasing
 
 ## SPECIFIC TO ADVERSARIAL ERASING ##
 max_iterations: 10
 heatmaps:
-  base_directory: heatmaps
+  base_directory: out/heatmaps
   threshold: 0.75
   fill_color: 0
