--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 # Cache and logs
 __pycache__/
 /lightning_logs
-# .ipynb_checkpoints/
-# .neptune/
+.ipynb_checkpoints/
+.neptune/
 
 # MacOS system files
 .DS_Store
