--- a/conf/mode/adversarial_erasing.yaml
+++ b/conf/mode/adversarial_erasing.yaml
@@ -11,7 +11,7 @@ train_config:
     base_directory: out/heatmaps
     threshold: 0.7
     fill_color: 0
-    negative_load_strategy: first_six
+    negative_load_strategy: pl_specific
   aug:
     translate_frac: 0.35  # Same for both x and y
     degrees: 20  # Rotation in degrees
