fixed bug where I was loading wrong config in adversarial erasing

--- a/conf/bus_config.yaml
+++ b/conf/bus_config.yaml
@@ -2,7 +2,7 @@ defaults:
     - cancer_config
 
 data:
-  directory: data/bus_final
+  directory: data/bus
   original_width: 856
   original_height: 856
 
