--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -27,12 +27,14 @@ transforms:
 # This augmentation is used only if train_data_transform is set to 'train' in the 
 # training mode
   augmentation:
-    translate_frac: 0.4 # Using Optuna, the best value was found to be 0.4113, 
-                               # (with degrees: 20, scale: [0.9, 1.1])
-    degrees: 45
+    translate_frac: 0.35
+    degrees: 40
     scale: [0.9, 1.1]
     horizontal_flip: true
     vertical_flip: true
+    random_erasing:
+      p: 0.5
+      scale: [0.02, 0.1]
 
 ## MISC ##
 # Enable Tensor Cores for faster matrix multiplications, trading some 
