support envelope during training + restructure conf dir

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,3 +1,6 @@
 defaults:
-  - defaults
+  - hardware: cuda
+  - logger: neptune
+  - data: polar_lows
   - mode: adversarial_erasing
+  - training: base
