Allow selecting CAM attribution

--- a/conf/mode/adversarial_erasing.yaml
+++ b/conf/mode/adversarial_erasing.yaml
@@ -8,6 +8,7 @@ erase_strategy: heatmap
 train_config:
   max_iterations: 10
   heatmaps:
+    attribution: gradcam  # Options: gradcam, cam
     base_directory: out/heatmaps
     threshold: 0.7
     fill_color: 0
