--- a/conf/training/pascal_voc.yaml
+++ b/conf/training/pascal_voc.yaml
@@ -1,5 +1,9 @@
 defaults:
   - base
 
+# Pascal VOC is multi-label; use BCEWithLogitsLoss and adjust threshold
 num_classes: 20
 criterion: bce_with_logits
+multi_label: true
+threshold: 0.5
+
