--- a/conf/training/base.yaml
+++ b/conf/training/base.yaml
@@ -24,7 +24,7 @@ checkpoint:
   monitor: val_loss
   mode: min
   directory: out/checkpoints
-  filename: best-checkpoint
+  name_prefix: adver_
 
 # Learning rate scheduler
 lr_scheduler:
