--- a/conf/bus.yaml
+++ b/conf/bus.yaml
@@ -5,13 +5,16 @@ defaults:
   - mode: adversarial_erasing
   - training: base
 
+training:
+  batch_size: 32
+  learning_rate: 1e-4
+
 mode:
   train_config:
     max_iterations: 6
     heatmaps:
       threshold: 0.9
       negative_load_strategy: random
-      super_sizes: [512]
       area_envelope:
         scale: 0.2
   masks:
