--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -5,7 +5,4 @@ defaults:
   - mode: adversarial_erasing
   - training: base
 
-skip_training: true
-mode:
-  masks:
-    remove_background: true
+skip_training: false
