--- a/conf/bus_std_aer.yaml
+++ b/conf/bus_std_aer.yaml
@@ -5,5 +5,4 @@ mode:
   train_config:
     heatmaps:
       area_envelope:
-        start_iteration: 100  # disables area envelope
-        scale: 0.2
+        start_iteration: 100
